feat(metrics): time Java command lifecycle
Signed-off-by: Steven Zeng <szeng2@atlassian.com>